# Kontor

./: .gitignore  API.md  BLS_ARCHITECTURE.md  BLS_bulk_bundling.md  BLS_key_derivation_and_registration.md  CONTRACTS.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  bls_plan.md  package-lock.json  test_fastnum.rs
bench/: Cargo.toml
bench/src/: main.rs
core/: Cargo.toml  README.md  TESTING.md
core/.cargo/: audit.toml
core/.github/workflows/: ci.yml
core/amm-verifier/: Cargo.toml
core/amm-verifier/src/: main.rs
core/bls-crypto/: Cargo.toml
core/bls-crypto/src/: lib.rs  registration.rs
core/consensus-sim/: Cargo.toml
core/consensus-sim/src/: lib.rs  main.rs  mock_bitcoin.rs  reactor.rs  state_log.rs
core/consensus-sim/src/reactor/: bitcoin.rs  consensus.rs  finality.rs  mod.rs  types.rs
core/consensus-sim/tests/: integration.rs
core/indexer/: Cargo.toml  build.rs
core/indexer-types/: Cargo.toml
core/indexer-types/src/: lib.rs
core/indexer/benches/: serializer_bench.rs
core/indexer/examples/: serializer_sizes.rs
core/indexer/src/: batch.rs  block.rs  bls.rs  bls_batch.rs  config.rs  contract_build.rs  info.rs  kbl1.rs  keygen.rs  legacy_test_utils.rs  lib.rs  logging.rs  main.rs  metrics.rs  multi_psbt_test_utils.rs  reg_tester.rs  regtest_utils.rs  retry.rs  signer_registry.rs  test_utils.rs  testlib_exports.rs
core/indexer/tests/: amm_contract.rs  amm_integration_manual.rs  amm_simple.rs  api_load_tests.rs  asset_flow.rs  batch_dedup.rs  bitcoin_client.rs  bitcoin_follower.rs  block_filter_map.rs  bls_attack_unit.rs  bls_attack_vectors.rs  bls_batch.rs  bls_bulk_compose.rs  bls_bulk_unit.rs  bls_key_derivation_and_registration.rs  bls_replay_protection.rs  bls_user_registry.rs  commit_reveal.rs  compile_fail_tests.rs  compose.rs  compose_api.rs  compose_api_validation.rs  compose_commit_unit.rs  compose_helpers.rs  compose_helpers_unit_tests.rs  compose_multi_api.rs  compose_reveal_unit.rs  consensus_cluster.rs  contract_all.rs  contract_load_tests.rs  counter_contract.rs  crypto_contract.rs  database.rs  fib_contract.rs  file_descriptor.rs  file_ledger.rs  file_storage.rs  get_blocks_query.rs  get_results_query.rs  get_transactions_query.rs  (+58 more)
core/kontor/: Cargo.toml
core/kontor-core/: Cargo.toml
core/kontor-core/src/: lib.rs
core/kontor-mobile/: Cargo.toml
core/kontor-mobile/src/: lib.rs
core/kontor-sdk/: Cargo.toml  build.sh
core/kontor-sdk-native/: Cargo.toml
core/kontor-sdk-native/src/: lib.rs
core/kontor-sdk-wasm/: Cargo.toml  build.sh
core/kontor-sdk-wasm/src/: lib.rs
core/kontor-sdk/src/: lib.rs  wit_resource.rs
core/kontor-sdk/wit/: root.wit
core/kontor/src/: main.rs
core/kontor/tests/: api.rs  bitcoin_client.rs  bitcoin_follower.rs  checkpoint_queries.rs  commit_reveal.rs  commit_reveal_random_keypair.rs  compose.rs  compose_api.rs  database.rs  event_subscriber.rs  fib_contract.rs  fib_contract_next.rs  get_last_matching_block_height.rs  get_transactions.rs  legacy_commit_reveal_p2wsh.rs  legacy_segwit_envelope.rs  legacy_segwit_swap.rs  legacy_taproot_envelope.rs  legacy_taproot_swap.rs  reactor.rs  reactor_prop.rs  regtest_commit_reveal.rs  rollback.rs  signature_replay_fails.rs  swap.rs  testnet_commit_reveal.rs  transaction_pagination.rs  trigger.rs  websocket.rs
core/macros/: Cargo.toml
core/macros/src/: contract.rs  contract_address.rs  holder_ref.rs  impls.rs  import.rs  index_decl.rs  indexed.rs  interface.rs  lib.rs  model.rs  registry.rs  regtest.rs  root.rs  runtime.rs  storage_enum.rs  store.rs  test.rs  transformers.rs  utils.rs  wavey.rs  wrapper.rs
core/numerics/: Cargo.toml
core/numerics/src/: lib.rs
core/stdlib/: Cargo.toml
core/stdlib/src/: asset.rs  deque.rs  dot_path_buf.rs  foreign.rs  indexed_map.rs  key_path.rs  keycodec.rs  lib.rs  map.rs  memory_storage.rs  resource_table.rs  storage_interface.rs  wave_interfaces.rs
core/stdlib/tests/: map_default.rs
core/stdlib/wit/: stdlib.wit
core/testlib/: Cargo.toml  build.rs
core/testlib/src/: lib.rs
core/ui/: README.md
core/ui/frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
core/wit-validator/: rules.md
core/wit-validator/src/: error.rs  lib.rs  rules.rs
postcard-ts/: Cargo.toml  build.sh  package-lock.json  package.json  test-in-browser.html
postcard-ts/src/: lib.rs
postcard-ts/test/: main.test.ts
postcard-ts/ts/: postcard-ts.core.wasm  postcard-ts.d.ts  postcard-ts.js
postcard-ts/wit/: root.wit
sdk/crate/: Cargo.toml  build.sh
sdk/crate/src/: lib.rs  numerics_api.rs  wit_resource.rs
sdk/crate/wit/: root.wit
test-contracts/: Cargo.toml  build.sh  rust-toolchain.toml
test-contracts/.cargo/: config.toml
test-contracts/amm/src/: lib.rs
test-contracts/amm/wit/: contract.wit
test-contracts/arith/src/: lib.rs
test-contracts/arith/wit/: contract.wit
test-contracts/binaries/: BUILD.md  amm.wasm.br  arith.wasm.br  build.json  counter.wasm.br  crypto.wasm.br  decimal_token.wasm.br  error_test.wasm.br  fib.wasm.br  pool.wasm.br  proxy.wasm.br  shared_account.wasm.br  test_token.wasm.br
test-contracts/counter/: Cargo.toml
test-contracts/counter/src/: lib.rs
test-contracts/counter/wit/: contract.wit
test-contracts/crypto/src/: lib.rs
test-contracts/crypto/wit/: contract.wit
test-contracts/decimal-token/: Cargo.toml
test-contracts/decimal-token/src/: lib.rs
test-contracts/error-test/: Cargo.toml
test-contracts/error-test/src/: lib.rs
test-contracts/error-test/wit/: contract.wit
test-contracts/fib/src/: lib.rs
test-contracts/fib/wit/: contract.wit
test-contracts/nft/src/: lib.rs
test-contracts/nft/wit/: contract.wit
test-contracts/pool/src/: lib.rs
test-contracts/pool/wit/: contract.wit
test-contracts/proxy/src/: lib.rs
test-contracts/proxy/wit/: contract.wit
test-contracts/shared-account/src/: lib.rs
test-contracts/shared-account/wit/: contract.wit
test-contracts/test-token/: Cargo.toml
test-contracts/test-token/src/: lib.rs
test-contracts/test-token/wit/: contract.wit
test-contracts/token/wit/: contract.wit
(+721 files in other folders)
