[package]
name = "bench"
version = "0.1.0"
edition = "2024"

[features]
unstable = []

[dependencies]
kontor = { path = "../" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.13"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
bitcoin = { version = "0.32.5", features = ["serde", "rand", "rand-std"] }
rand = "0.9.1"
futures-util = "0.3.31"
futures = "0.3.31"
httpmock = "0.7.0-rc.1"

[dev-dependencies]
httpmock = "0.7.0-rc.1"
