[workspace]
members = ["indexer", "indexer-types", "macros", "stdlib", "testlib", "wit-validator"]
resolver = "2"

[workspace.lints.clippy]
new_without_default = "allow"
uninlined_format_args = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
# IMPORTANT
wasmtime = { version = "=44.0.0", features = ["wave", "component-model-async"] }
wit-bindgen = "=0.57.1"
wit-component = "=0.247.0"
wit-parser = "=0.247.0"
wasm-wave = { version ="0.247.0", default-features = false }

anyhow = { version = "=1.0.102", default-features = false }
async-trait = "=0.1.89"
axum = { version = "=0.8.9", features = ["http2", "ws"] }
bitcoin = { version = "=0.32.8", features = ["serde", "rand", "rand-std"] }
bon = { version = "=3.9.1", default-features = false, features = ["alloc"] }
bytes = "=1.11.1"
clap = { version = "=4.6.1", features = ["derive"] }
eyre = "=0.6.12"
glob = "=0.3.3"
indexmap = { version = "=2.14.0", features = ["serde"] }
# Pinned to a small fork of upstream that adds `crypto` and `regexp_full`
# as turso_core feature flags (mirroring uuid/time/series). Swap back to
# upstream once equivalent changes land there.
turso      = { git = "https://github.com/wilfreddenton/turso", tag = "v0.6.0-pre.23-kontor.2" }
turso_core = { git = "https://github.com/wilfreddenton/turso", tag = "v0.6.0-pre.23-kontor.2", features = ["crypto", "regexp_full"] }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
prost = "=0.13.5"
serial_test = "=3.4.0"
serde = { version = "=1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "=1.0.149", default-features = false, features = ["alloc"] }
serde_with = { version = "=3.18.0", default-features = false, features = ["alloc", "macros"] }
sha3 = "=0.11.0"
tempfile = "=3.27.0"
tokio = { version = "=1.52.1", features = ["full"] }
tokio-util = "=0.7.18"
tower = "=0.5.3"
tower-http = { version = "=0.6.8", features = [
  "fs",
  "trace",
  "compression-full",
  "request-id",
  "timeout",
  "catch-panic",
  "cors",
] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
ts-rs = { version = "=12.0.1", features = ["format"] }

# Malachite BFT consensus
malachitebft-app-channel = { git = "https://github.com/circlefin/malachite", rev = "9109e96e4547", package = "arc-malachitebft-app-channel" }
