[workspace]
members = [
    "bls-crypto",
    "indexer",
    "indexer-types",
    "kontor-sdk",
    "macros",
    "numerics",
    "stdlib",
    "testlib",
    "wit-validator",
]
resolver = "2"

[workspace.lints.clippy]
new_without_default = "allow"
uninlined_format_args = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
# IMPORTANT
wasmtime = { version = "=44.0.1", features = ["wave", "component-model-async"] }
wit-bindgen = "=0.57.1"
wit-component = "=0.248.0"
wit-parser = "=0.248.0"
wasm-wave = { version ="0.248.0", default-features = false }

anyhow = { version = "=1.0.102", default-features = false }
fastnum = "=0.7.4"
num = "=0.4.3"
async-trait = "=0.1.89"
axum = { version = "=0.8.9", features = ["http2"] }
bitcoin = { version = "=0.32.8", features = ["serde", "rand", "rand-std"] }
bon = { version = "=3.9.1", default-features = false, features = ["alloc"] }
bytes = "=1.11.1"
clap = { version = "=4.6.1", features = ["derive"] }
eyre = "=0.6.12"
glob = "=0.3.3"
indexmap = { version = "=2.14.0", features = ["serde"] }
libsql = "=0.9.30"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
prost = "=0.13.5"
serial_test = "=3.4.0"
serde = { version = "=1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "=1.0.149", default-features = false, features = ["alloc"] }
serde_with = { version = "=3.19.0", default-features = false, features = ["alloc", "macros"] }
sha3 = "=0.11.0"
tempfile = "=3.27.0"
tokio = { version = "=1.52.1", features = ["full"] }
tokio-util = "=0.7.18"
tower = "=0.5.3"
tower-http = { version = "=0.6.8", features = [
  "fs",
  "trace",
  "compression-full",
  "request-id",
  "timeout",
  "catch-panic",
  "cors",
] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
ts-rs = { version = "=12.0.1", features = ["format"] }

# Malachite BFT consensus
malachitebft-app-channel = { git = "https://github.com/circlefin/malachite", rev = "8ee5d998545087e73710c37e457cc03cb56b1463", package = "arc-malachitebft-app-channel" }
