[workspace]
members = [
    "bls-crypto",
    "indexer",
    "indexer-types",
    "kontor-sdk",
    "macros",
    "numerics",
    "stdlib",
    "testlib",
    "wit-validator",
]
resolver = "2"

[workspace.lints.clippy]
new_without_default = "allow"
uninlined_format_args = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
# IMPORTANT
wasmtime = { version = "=45.0.0", features = ["wave", "component-model-async"] }
wit-bindgen = "=0.59.0"
wit-component = "=0.251.0"
wit-parser = "=0.251.0"
wasm-wave = { version ="0.251.0", default-features = false }

anyhow = { version = "=1.0.102", default-features = false }
fastnum = "=0.7.4"
num = "=0.4.3"
async-trait = "=0.1.89"
axum = { version = "=0.8.9", features = ["http2"] }
# Version is workspace-pinned; each crate selects its own features (bls-crypto
# and indexer-types stay default-features = false for the wasm build).
bitcoin = { version = "=0.32.100", default-features = false }
# Version is workspace-pinned; bls-crypto adds the `portable` feature for wasm.
blst = "=0.3.16"
bon = { version = "=3.9.1", default-features = false, features = ["alloc"] }
bytes = "=1.11.1"
clap = { version = "=4.6.1", features = ["derive"] }
eyre = "=0.6.12"
glob = "=0.3.3"
indexmap = { version = "=2.14.0", features = ["serde"] }
libsql = "=0.9.30"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
prost = "=0.13.5"
serde = { version = "=1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "=1.0.150", default-features = false, features = ["alloc"] }
serde_with = { version = "=3.20.0", default-features = false, features = ["alloc", "macros"] }
sha3 = "=0.11.0"
tempfile = "=3.27.0"
tokio = { version = "=1.52.3", features = ["full"] }
tokio-util = "=0.7.18"
tower = "=0.5.3"
tower-http = { version = "=0.6.11", features = [
  "fs",
  "trace",
  "compression-full",
  "request-id",
  "timeout",
  "catch-panic",
  "cors",
] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
ts-rs = { version = "=12.0.1", features = ["format"] }

# Malachite BFT consensus
malachitebft-app-channel = { git = "https://github.com/circlefin/malachite", rev = "8ee5d998545087e73710c37e457cc03cb56b1463", package = "arc-malachitebft-app-channel" }

# Pin malachite to the KontorProtocol fork (branch listen-addr-event): stores the
# resolved consensus listen address in network state so it's readable via
# dump_state — used to bring up clusters on `/tcp/0` (no fixed-port allocation).
# Drop this [patch] block once the change lands upstream in circlefin.
[patch."https://github.com/circlefin/malachite"]
arc-malachitebft-app = { git = "https://github.com/KontorProtocol/malachite", rev = "e600da33cee22fd9d848fefc4d33bcf77b204fc8" }
arc-malachitebft-app-channel = { git = "https://github.com/KontorProtocol/malachite", rev = "e600da33cee22fd9d848fefc4d33bcf77b204fc8" }
arc-malachitebft-codec = { git = "https://github.com/KontorProtocol/malachite", rev = "e600da33cee22fd9d848fefc4d33bcf77b204fc8" }
arc-malachitebft-config = { git = "https://github.com/KontorProtocol/malachite", rev = "e600da33cee22fd9d848fefc4d33bcf77b204fc8" }
arc-malachitebft-core-consensus = { git = "https://github.com/KontorProtocol/malachite", rev = "e600da33cee22fd9d848fefc4d33bcf77b204fc8" }
arc-malachitebft-core-driver = { git = "https://github.com/KontorProtocol/malachite", rev = "e600da33cee22fd9d848fefc4d33bcf77b204fc8" }
arc-malachitebft-core-state-machine = { git = "https://github.com/KontorProtocol/malachite", rev = "e600da33cee22fd9d848fefc4d33bcf77b204fc8" }
arc-malachitebft-core-types = { git = "https://github.com/KontorProtocol/malachite", rev = "e600da33cee22fd9d848fefc4d33bcf77b204fc8" }
arc-malachitebft-core-votekeeper = { git = "https://github.com/KontorProtocol/malachite", rev = "e600da33cee22fd9d848fefc4d33bcf77b204fc8" }
arc-malachitebft-discovery = { git = "https://github.com/KontorProtocol/malachite", rev = "e600da33cee22fd9d848fefc4d33bcf77b204fc8" }
arc-malachitebft-engine = { git = "https://github.com/KontorProtocol/malachite", rev = "e600da33cee22fd9d848fefc4d33bcf77b204fc8" }
arc-malachitebft-metrics = { git = "https://github.com/KontorProtocol/malachite", rev = "e600da33cee22fd9d848fefc4d33bcf77b204fc8" }
arc-malachitebft-network = { git = "https://github.com/KontorProtocol/malachite", rev = "e600da33cee22fd9d848fefc4d33bcf77b204fc8" }
arc-malachitebft-peer = { git = "https://github.com/KontorProtocol/malachite", rev = "e600da33cee22fd9d848fefc4d33bcf77b204fc8" }
arc-malachitebft-proto = { git = "https://github.com/KontorProtocol/malachite", rev = "e600da33cee22fd9d848fefc4d33bcf77b204fc8" }
arc-malachitebft-signing = { git = "https://github.com/KontorProtocol/malachite", rev = "e600da33cee22fd9d848fefc4d33bcf77b204fc8" }
arc-malachitebft-signing-ed25519 = { git = "https://github.com/KontorProtocol/malachite", rev = "e600da33cee22fd9d848fefc4d33bcf77b204fc8" }
arc-malachitebft-sync = { git = "https://github.com/KontorProtocol/malachite", rev = "e600da33cee22fd9d848fefc4d33bcf77b204fc8" }
arc-malachitebft-wal = { git = "https://github.com/KontorProtocol/malachite", rev = "e600da33cee22fd9d848fefc4d33bcf77b204fc8" }

# Fork adds `additional_type_attributes` / `additional_member_attributes` to
# wit-bindgen's generate!, so `contract!` can inject `#[index]` / `#[derive(Indexed)]`
# onto specific WIT record types. Tracks the upstream PR branch
# (bytecodealliance/wit-bindgen feat/targeted-attributes); drop once merged.
[patch.crates-io]
wit-bindgen-rust = { git = "https://github.com/wilfreddenton/wit-bindgen", rev = "bca574259a6c87911da2045c0a5efde17927e694" }
wit-bindgen-rust-macro = { git = "https://github.com/wilfreddenton/wit-bindgen", rev = "bca574259a6c87911da2045c0a5efde17927e694" }

# Optimize the proof-system crates even in dev/test builds. Proof
# generation (kontor-crypto's Nova prover) is exercised only in tests and
# is ~20-30x slower unoptimized; compiling just these deps at opt-level=3
# keeps test proving near release speed while the rest stays debug.
[profile.dev.package.kontor-crypto]
opt-level = 3
[profile.dev.package.kontor-crypto-core]
opt-level = 3
[profile.dev.package.nova-snark]
opt-level = 3
[profile.dev.package.halo2curves]
opt-level = 3
[profile.dev.package.ff]
opt-level = 3
[profile.dev.package.group]
opt-level = 3
[profile.dev.package.generic-array]
opt-level = 3
