[package]
name = "postcard-ts"
version = "0.1.0"
edition = "2024"

[build]
target = "wasm32-unknown-unknown"

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=-simd128"]

[dependencies]
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.145", default-features = false, features = ["alloc"] }
serde_with = "3.16.0"
wit-bindgen = "0.48.0"

[lib]
crate-type = ["cdylib"]
