[workspace]
members = ["amm", "arith", "counter", "crypto", "decimal-token", "error-test", "fib", "pool", "proxy", "shared-account", "test-token"]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[workspace.lints.clippy]
new_without_default = "allow"
uninlined_format_args = "allow"
too_many_arguments = "allow"
unit_arg = "allow"

[workspace.dependencies]
stdlib = { path = "../core/stdlib" }

# Match core's forked wit-bindgen (adds per-type/per-field attribute injection
# for contract!'s `indexed = {...}`). Drop once upstreamed.
[patch.crates-io]
wit-bindgen-rust = { git = "https://github.com/wilfreddenton/wit-bindgen", rev = "2a872647adb6adec4dcd7c0504e73d3b26acb241" }
wit-bindgen-rust-macro = { git = "https://github.com/wilfreddenton/wit-bindgen", rev = "2a872647adb6adec4dcd7c0504e73d3b26acb241" }
