[package]
name = "consensus-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
indexer = { path = "../indexer" }
malachitebft-app-channel = { workspace = true }

clap = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
rand = "0.8"
