[package]
name = "indexer"
version = "0.2.0"
edition = "2024"
default-run = "kontor"

[features]
testing = []

[[bin]]
name = "kontor"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
stdlib = { path = "../stdlib" }
macros = { path = "../macros" }
indexer-types = { path = "../indexer-types" }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
wasmtime = { workspace = true }
wasm-wave = { workspace = true }
wit-component = { workspace = true }
libsql = { workspace = true }
tracing = { workspace = true }
bon = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
ts-rs = { workspace = true }
indexmap = { workspace = true }
bitcoin = { workspace = true }

backon = { version = "=1.6.0", features = ["tokio-sleep"] }
base64 = "=0.22.1"
deadpool = "=0.13.0"
reqwest = { version = "=0.13.2", default-features = false, features = ["http2", "json", "rustls"] }
thiserror = "=2.0.18"
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
zmq = "=0.10.0"
scopeguard = "=1.2.0"
rayon = "=1.12.0"
clap = { workspace = true, features = ["env"] }
axum-server = "=0.8.0"
futures-util = "=0.3.32"
hex = "=0.4.3"
hkdf = "=0.12.4"
rand = "=0.10.1"
rand_chacha = "=0.10.0"
brotli = "=8.0.2"
sha2 = "=0.10.9"
num = "=0.4.3"
fastnum = "=0.7.4"
strum = { version = "=0.28.0", features = ["derive"] }
tokio-tungstenite = { version = "=0.29.0", features = ["rustls-tls-webpki-roots"] }
tracing-stackdriver = "=0.10.0"
regex = "=1.12.3"
kontor-crypto = "0.1.6"
ff = "=0.13.1"
moka = { version = "0.12.11", features = ["future"] }
blst = "=0.3.16"

# Malachite BFT consensus
malachitebft-app-channel = { workspace = true }
malachitebft-app = { git = "https://github.com/circlefin/malachite", rev = "9109e96e4547", package = "arc-malachitebft-app" }
malachitebft-core-types = { git = "https://github.com/circlefin/malachite", rev = "9109e96e4547", package = "arc-malachitebft-core-types", features = ["serde"] }
malachitebft-engine = { git = "https://github.com/circlefin/malachite", rev = "9109e96e4547", package = "arc-malachitebft-engine" }
malachitebft-config = { git = "https://github.com/circlefin/malachite", rev = "9109e96e4547", package = "arc-malachitebft-config" }
malachitebft-signing = { git = "https://github.com/circlefin/malachite", rev = "9109e96e4547", package = "arc-malachitebft-signing" }
malachitebft-signing-ed25519 = { git = "https://github.com/circlefin/malachite", rev = "9109e96e4547", package = "arc-malachitebft-signing-ed25519", features = ["rand", "serde"] }
malachitebft-codec = { git = "https://github.com/circlefin/malachite", rev = "9109e96e4547", package = "arc-malachitebft-codec" }
malachitebft-core-consensus = { git = "https://github.com/circlefin/malachite", rev = "9109e96e4547", package = "arc-malachitebft-core-consensus" }
malachitebft-proto = { git = "https://github.com/circlefin/malachite", rev = "9109e96e4547", package = "arc-malachitebft-proto" }
malachitebft-sync = { git = "https://github.com/circlefin/malachite", rev = "9109e96e4547", package = "arc-malachitebft-sync" }

async-trait = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
sha3 = { workspace = true }

[dev-dependencies]
testlib = { path = "../testlib" }
serial_test = "=3.4.0"
ctor = "=0.10.0"

once_cell = "=1.21.4"
axum-test = "=20.0.0"
proptest = "=1.11.0"

[build-dependencies]
glob = { workspace = true }
built = "=0.8.0"
prost-build = "0.13.5"
protox = "0.8.0"
