[package]
name = "indexer"
version = "0.2.0"
edition = "2024"
default-run = "kontor"

[features]
testing = []

[[bin]]
name = "kontor"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
stdlib = { path = "../stdlib" }
macros = { path = "../macros" }
numerics = { path = "../numerics" }
indexer-types = { path = "../indexer-types" }
wit-validator = { path = "../wit-validator" }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
wasmtime = { workspace = true }
wasm-wave = { workspace = true }
wit-component = { workspace = true }
libsql = { workspace = true }
tracing = { workspace = true }
bon = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
ts-rs = { workspace = true }
indexmap = { workspace = true }
bitcoin = { workspace = true, features = ["std", "secp-recovery", "serde", "rand", "rand-std"] }

backon = { version = "=1.6.0", features = ["tokio-sleep"] }
base64 = "=0.22.1"
deadpool = "=0.13.0"
reqwest = { version = "=0.13.4", default-features = false, features = ["http2", "json", "rustls"] }
thiserror = "=2.0.18"
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
zmq = "=0.10.0"
scopeguard = "=1.2.0"
rayon = "=1.12.0"
priority-queue = "=2.7.0"
clap = { workspace = true, features = ["env"] }
axum-server = "=0.8.0"
futures-util = "=0.3.32"
hex = "=0.4.3"
hkdf = "=0.12.4"
rand = "=0.10.2"
rand_chacha = "=0.10.0"
brotli = "=8.0.4"
postcard = { workspace = true }
sha2 = "=0.10.9"
num = { workspace = true }
fastnum = { workspace = true }
strum = { version = "=0.28.0", features = ["derive"] }
tracing-stackdriver = "=0.10.0"
regex = "=1.12.4"
kontor-crypto = "0.3.0"
ff = "=0.13.1"
moka = { version = "0.12.15", features = ["future"] }
blst = { workspace = true }
bls-crypto = { path = "../bls-crypto" }
metrics = "=0.24.6"
metrics-exporter-prometheus = "=0.18.3"

# Malachite BFT consensus
malachitebft-app-channel = { workspace = true }
malachitebft-app = { git = "https://github.com/circlefin/malachite", rev = "8ee5d998545087e73710c37e457cc03cb56b1463", package = "arc-malachitebft-app" }
malachitebft-core-types = { git = "https://github.com/circlefin/malachite", rev = "8ee5d998545087e73710c37e457cc03cb56b1463", package = "arc-malachitebft-core-types", features = ["serde"] }
malachitebft-engine = { git = "https://github.com/circlefin/malachite", rev = "8ee5d998545087e73710c37e457cc03cb56b1463", package = "arc-malachitebft-engine" }
malachitebft-config = { git = "https://github.com/circlefin/malachite", rev = "8ee5d998545087e73710c37e457cc03cb56b1463", package = "arc-malachitebft-config" }
malachitebft-signing = { git = "https://github.com/circlefin/malachite", rev = "8ee5d998545087e73710c37e457cc03cb56b1463", package = "arc-malachitebft-signing" }
malachitebft-signing-ed25519 = { git = "https://github.com/circlefin/malachite", rev = "8ee5d998545087e73710c37e457cc03cb56b1463", package = "arc-malachitebft-signing-ed25519", features = ["rand", "serde"] }
malachitebft-codec = { git = "https://github.com/circlefin/malachite", rev = "8ee5d998545087e73710c37e457cc03cb56b1463", package = "arc-malachitebft-codec" }
malachitebft-core-consensus = { git = "https://github.com/circlefin/malachite", rev = "8ee5d998545087e73710c37e457cc03cb56b1463", package = "arc-malachitebft-core-consensus" }
malachitebft-proto = { git = "https://github.com/circlefin/malachite", rev = "8ee5d998545087e73710c37e457cc03cb56b1463", package = "arc-malachitebft-proto" }
malachitebft-sync = { git = "https://github.com/circlefin/malachite", rev = "8ee5d998545087e73710c37e457cc03cb56b1463", package = "arc-malachitebft-sync" }

async-trait = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
sha3 = { workspace = true }

[dev-dependencies]
testlib = { path = "../testlib" }
dtor = "=1.0.5"

once_cell = "=1.21.4"
axum-test = "=21.0.0"
proptest = "=1.11.0"

[build-dependencies]
built = { version = "=0.8.1", features = ["git2"] }
prost-build = "0.13.5"
protox = "0.8.0"
