[package]
name = "kontor-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
# All function bodies (BLS, Inst codec, Wit/WAVE, validation) live in
# kontor-core; this crate is only the wit-bindgen shim around them.
kontor-core = { path = "../kontor-core" }
# For the re-exported `wit_bindgen` (the `generate!` macro's runtime).
indexer-types = { path = "../indexer-types" }
numerics = { path = "../numerics" }

[lib]
crate-type = ["cdylib"]
