[package]
name = "kontor-sdk"
version = "0.1.0"
edition = "2024"
# sdk/crate is a workspace member of core/Cargo.toml but lives outside the
# core/ subtree. Cargo's normal ancestor-walk doesn't find the workspace
# root, so name it explicitly here.
workspace = "../../core"

[dependencies]
indexer-types = { path = "../../core/indexer-types" }
wit-validator = { path = "../../core/wit-validator" }
numerics = { path = "../../core/numerics" }
# Inherits version pin from core/Cargo.toml's `[workspace.dependencies]`.
# wasm-wave's `wit` feature (bridge wit-parser's Resolve → wasm-wave's Type)
# requires std; the workspace pin disables defaults so we re-enable here.
wasm-wave = { workspace = true, features = ["std", "wit"] }
wit-parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
crate-type = ["cdylib"]
